# currency-exchange-processor

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: requirements.txt
src/etl_scripts/: exchange_api.py  job_runner.py  repository.py  transform.py
src/etl_scripts/schemas/: db.py
src/etl_scripts/utilities/: config_reader.py  date_util.py
src/resources/: config.yaml
test/: requirements.txt
tests/: api.json  test_repository.py  test_transform.py
